# lib/api-spec/openapi.yaml
@@ -559,6 +559,10 @@ components:
           type: ["integer", "null"]
         duration:
           type: ["string", "null"]
+        isFeatured:
+          type: boolean
+        isLive:
+          type: boolean
         createdAt:
           type: string
       required:
@@ -567,6 +571,8 @@ components:
         - title
         - thumbnailUrl
         - publishedAt
+        - isFeatured
+        - isLive
         - createdAt
 
     SermonStats:
